# axum-diesel-blog

./: .env  Cargo.toml  dump.rdb
migrations/2023-01-10-000054_create_users/: up.sql
migrations/2023-01-14-040935_create_posts/: up.sql
migrations/2023-01-14-040938_create_tags/: up.sql
src/: main.rs  schema.rs
src/auth/: jwt.rs
src/controllers/: auth_controller.rs  mod.rs  posts_controller.rs  tags_controller.rs  users_controller.rs
src/dto/: mod.rs  post.rs  tag.rs  user.rs
src/model/: mod.rs  posts.rs  tags.rs  users.rs
src/repository/: auth.rs  mod.rs  posts.rs  tags.rs  users.rs
src/router/: auth.rs  mod.rs  posts_router.rs  root.rs  tags_router.rs  users_router.rs
