[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
tokio = { version = "1.22.0", features = ["full"] }
dotenvy = "0.15"
axum = "0.6.1"
bb8-diesel = { git = "https://github.com/overdrivenpotato/bb8-diesel.git", version = "0.2.1" }
bb8 = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "1"
chrono= { version = "0.4.3", features = ["serde"] }
md-5 = "0.10.5"
